--- a/source/src/App/mainStyles.scss
+++ b/source/src/App/mainStyles.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700,700italic);
+@import url('https://fonts.cdnfonts.com/css/post-no-bills-jaffna?styles=18992,18991,18994,18995,18996,18993');
 
 .container{
     margin: 0 auto;
