--- a/source/src/Components/Header/Header.scss
+++ b/source/src/Components/Header/Header.scss
@@ -1,12 +1,20 @@
 #header-nav-btn-buy{
     background: url('./images/icon-buy.svg') no-repeat center center/cover;
+
+    transition: transform .7s ease;
 }
 
 #header-nav-btn-search{
     background: url('./images/icon-search.svg') no-repeat center center/cover;
     
+    transition: transform .7s ease;
 }
 
+#header-nav-btn-buy:hover, #header-nav-btn-search:hover{
+    transform: scale(1.2);
+
+    transition: transform .7s ease;
+}
 
 .header{
 
@@ -24,6 +32,56 @@
         user-select: none;
 
         color: #ffffff;
+    }
+
+    &__logo{
+
+        width: 320px;
+        height: 320px;
+
+        border: 4px solid #ffffff;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        user-select: none;
+
+        &__title{
+
+            position: relative;
+
+            font-size: 64px;
+            font-family: 'Post No Bills Jaffna SemiBold', sans-serif;
+
+            text-transform: uppercase;
+
+            color: #ffffff;
+        }
+
+        &__title::after{
+            content: '';
+
+            position: absolute;
+            left: 0;
+            top: 100%;
+
+            background-color: #ffffff;
+            height: 2px;
+            width: 100%;
+        }
+
+        &__label{
+
+            margin-top: 10px;
+            
+            font-size: 22px;
+
+            color: #ffffff;
+
+            text-transform: uppercase;
+        }
     }
 
     &-container{
@@ -121,54 +179,6 @@
         justify-content: center;
 
         font-family: 'PT Sans';
-
-        &__logo{
-
-            width: 320px;
-            height: 320px;
-
-            border: 4px solid #ffffff;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-
-            &__title{
-
-                position: relative;
-
-                font-size: 64px;
-                font-family: 'Post No Bills Jaffna SemiBold', sans-serif;
-
-                text-transform: uppercase;
-
-                color: #ffffff;
-            }
-
-            &__title::after{
-                content: '';
-
-                position: absolute;
-                left: 0;
-                top: 100%;
-
-                background-color: #ffffff;
-                height: 2px;
-                width: 100%;
-            }
-
-            &__label{
-
-                margin-top: 10px;
-                
-                font-size: 22px;
-
-                color: #ffffff;
-
-                text-transform: uppercase;
-            }
-        }
 
         &__description{
 
@@ -303,5 +313,219 @@
                 height: 100%;
             }
         }
+    }
+}
+
+.header-mobile{
+
+    &-container{
+
+        position: relative;
+
+        width: 100%;
+        height: 100%;
+
+    }
+
+    &__nav{
+
+        width: 100%;
+
+        &__menu{
+
+            width: 100%;
+    
+            flex-direction: column;
+            justify-content: space-between;
+    
+            &__item{
+    
+                width: 100%;
+                height: 80px;
+    
+                a{
+    
+                    font-size: 24px;
+                }
+            }
+    
+            &__item--btns{
+    
+                width: 50%;
+    
+                margin: 30px auto 30px auto;
+    
+                justify-content: space-around;
+    
+                border-top: 1px solid #ffffff;
+                border-bottom: 1px solid #ffffff;
+    
+                padding: 10px 0;
+    
+                #header-nav-btn-buy, #header-nav-btn-search{
+                    width: 48px;
+                    height: 48px;
+                }
+            }
+        }
+
+    }
+
+    &__info{
+
+        background-color: #222222;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        
+        width: 100%;
+
+        &__list{
+
+            &__item{
+
+                &__link{
+
+                }
+            }
+        }
+    }
+
+    &__burger-menu{
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+
+        background-color: #0F0F0F;
+        
+        width: 100%;
+        height: 100%;
+
+        padding-top: 40%;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+   
+    &__burger-btn{
+        
+        position: absolute;
+        top: 5%;
+        left: 45%;
+        z-index: 5;
+
+        height: 55px;
+        width: 55px;
+
+    }
+
+    &__burger-btn::after, &__burger-btn::before{
+
+        content: '';
+
+        position: absolute;
+        top: -28%;
+        left: 35%;
+        
+        height: 50px;
+        width: 2px;
+
+        background-color: #ffffff;
+    }
+
+    &__burger-btn::after{
+
+        transform: rotate(45deg) translateX(25px);
+    }
+
+    &__burger-btn::before{
+
+        transform: rotate(-45deg) translateX(-25px);
+    }
+
+    &__burger-btn--active::after{
+        
+        animation: btn-burger-after-active 2s forwards;
+    
+    }
+
+    &__burger-btn--active::before{
+        
+        animation: btn-burger-before-active 2s forwards;
+    }
+
+    &__burger-btn--close::after{
+        
+        animation: btn-burger-after-close 2s forwards;
+    }
+
+    &__burger-btn--close::before{
+        
+        animation: btn-burger-before-close 2s forwards;
+    }
+}
+
+@keyframes btn-burger-before-active {
+    
+    0%{
+        transform: rotate(-45deg) translateX(-25px);
+    }
+
+    50%{
+        transform: rotate(-90deg) translateX(-25px) translateY(-10px);
+    }
+
+    100%{
+        transform: rotate(-135deg) translateX(-10px) translateY(-10px);
+    }
+}
+
+@keyframes btn-burger-after-active {
+    
+    0%{
+        transform: rotate(45deg) translateX(25px);
+    }
+
+    50%{
+        transform: rotate(90deg) translateX(25px) translateY(-10px);
+    }
+
+    100%{
+        transform: rotate(135deg) translateX(10px) translateY(-10px);
+    }
+}
+
+@keyframes btn-burger-before-close {
+
+    0%{
+        transform: rotate(-135deg) translateX(-10px) translateY(-10px);
+    }
+    
+    50%{
+        transform: rotate(-90deg) translateX(-25px) translateY(-10px);
+    }
+
+    100%{
+        transform: rotate(-45deg) translateX(-25px);
+    }
+}
+
+@keyframes btn-burger-after-close {
+    
+    0%{
+        transform: rotate(135deg) translateX(10px) translateY(-10px);
+    }
+
+    50%{
+        transform: rotate(90deg) translateX(25px) translateY(-10px);
+    }
+
+    100%{
+        transform: rotate(45deg) translateX(25px);
     }
 }
