--- a/source/src/Components/ModalWindow/modalWindow.scss
+++ b/source/src/Components/ModalWindow/modalWindow.scss
@@ -2,11 +2,12 @@
     position: absolute;
     top: 0;
     height: 0;
+    z-index: 10;
 
     background-color: rgba($color: #000000, $alpha: .99);
 
-    height: 100vh;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
 
     display: none;
     align-items: center;
