--- a/source/src/App/App.scss
+++ b/source/src/App/App.scss
@@ -3,7 +3,13 @@
     min-width: 100%;
 
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
 
     position: relative;
+}
+
+.gradient{
+    background: url('./images/bg-img.jpg') no-repeat center center/cover;
 }
